XML 8.8.3 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.8.3. Tässä päivityksessä korjattiin myös ongelma #1 käännökset. Laitteistotietoja ei voi nykyään kääntää suomeksi, koska sen käännöspohjaa ei ole olemassa vaan tiedot tulevat suoraan Xiaomi-palvelimilta.

--- a/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
@@ -122,8 +122,8 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="menu_item_sort_name">Nimi</string>
   <string name="menu_item_sort_size">Koko</string>
   <string name="miui_device_name">Android</string>
-  <string name="msg_alert_cancel_restore">Pilven varmuuskopiota palautetaan, lopetetaanko se?</string>
-  <string name="msg_alert_restore_error">Pilven varmuuskopion palauttaminen epäonnistui, yritä uudelleen.</string>
+  <string name="msg_alert_cancel_restore">Palautetaan kohteita. Lopetetaanko nyt?</string>
+  <string name="msg_alert_restore_error">Kohteita ei voitu palauttaa Mi Pilvestä. Yritä uudelleen.</string>
   <string name="name_model">Henkilön %1$s %2$s</string>
   <string name="network_error">Yhdistä verkkoon</string>
   <string name="no_account">Et ole kirjautuneena Mi Tiliin.</string>
