--- a/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
@@ -369,14 +369,14 @@
   <string name="no_subject_view">(Ei otsikkoa)</string>
   <string name="non_english_subject_limit">13 merkin raja</string>
   <string name="nosend_message">Älä lähetä</string>
-  <string name="notification_channel_msg_description">Viesti-ilmoitus</string>
-  <string name="notification_channel_msg_name">Viesti</string>
-  <string name="notification_channel_other_description">Muu ilmoitus</string>
+  <string name="notification_channel_msg_description">Ilmoitukset viesteistä</string>
+  <string name="notification_channel_msg_name">Viestit</string>
+  <string name="notification_channel_other_description">Muut ilmoitukset</string>
   <string name="notification_channel_other_name">Muu</string>
-  <string name="notification_channel_sim1_description">SIM1:n viesti-ilmoitus</string>
-  <string name="notification_channel_sim1_name">SIM1 Viesti</string>
-  <string name="notification_channel_sim2_description">SIM2:n viesti-ilmoitus</string>
-  <string name="notification_channel_sim2_name">SIM2 Viesti</string>
+  <string name="notification_channel_sim1_description">Ilmoitukset SIM-kortin 1 viesteistä</string>
+  <string name="notification_channel_sim1_name">SIM-kortin 1 viestit</string>
+  <string name="notification_channel_sim2_description">Ilmoitukset SIM-kortin 2 viesteistä</string>
+  <string name="notification_channel_sim2_name">SIM-kortin 2 viestit</string>
   <string name="notification_copy">Kopioi OTP</string>
   <string name="notification_failed_multiple">%s viestiä ei voitu lähettää</string>
   <string name="notification_failed_multiple_title">Viestejä ei lähetetty</string>
