--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -372,7 +372,7 @@ Aseta vain laitteet vierekkäin (yleensä takakannet vastakkain) ja kosketa näy
   <string name="app_list_memory_use">Sovellusten käyttötiedot</string>
   <string name="app_list_preference_none">Ei mitään</string>
   <string name="app_memory_use">Muistin käyttö</string>
-  <string name="app_mobile">Mobiili</string>
+  <string name="app_mobile">Mobiilidata</string>
   <string name="app_name_label">Sovellus</string>
   <string name="app_name_na">Datan käyttö</string>
   <string name="app_not_found_dlg_text">Sovellusta ei löydy asennettujen sovelluksien luettelosta.</string>
@@ -426,7 +426,7 @@ Aseta vain laitteet vierekkäin (yleensä takakannet vastakkain) ja kosketa näy
   <string name="apply_now_button_text">Päivitä</string>
   <string name="apply_password_to_category_title">Vaadi lukituksen poisto</string>
   <string name="apply_update_fail">Päivitys epäonnistui</string>
-  <string name="approve_title">Varmentaminen</string>
+  <string name="approve_title">Sertifiointi</string>
   <string name="apps_storage">Sovellusten tallennustila</string>
   <string name="apps_summary">%1$d sovellusta asennettu</string>
   <string name="apps_summary_example">24 sovellusta asennettu</string>
@@ -997,12 +997,12 @@ Siirtonopeus"</string>
   <string name="bssid_label">BSSID:</string>
   <string name="bt_hci_snoop_log">Ota Bluetoothin HCI-tarkkailuloki käyttöön</string>
   <string name="bt_hci_snoop_log_summary">Tallenna kaikki Bluetoothin HCl-paketit tiedostoon</string>
-  <string name="bt_ldac_declaration">Kun Bluetooth-laite tukee LDAC:ia se yhdistetään oletuksena. LDAC tarjoaa laadukkaan äänentoiston ja se kuluttaa myös enemmän virtaa. Toistaminen onnistuu Bluetooth-laitteistorajoituksien vuoksi</string>
+  <string name="bt_ldac_declaration">Kun Bluetooth-laite tukee LDAC:ia se yhdistetään oletuksena. LDAC tarjoaa laadukkaan äänentoiston, mutta se kuluttaa myös enemmän virtaa. Ongelmia voi ilmeentyä toiston aikana Bluetooth-laitteistorajoituksien vuoksi.</string>
   <string name="bt_ldac_dialog_summary">"LDAC tarjoaa laadukkaan äänentoiston ja se kuluttaa myös enemmän virtaa
 Tämän ominaisuuden voi poistaa käytöstä [Asetuksista]"</string>
   <string name="bt_ldac_dialog_title">Nykyinen laite tukee LDAC:ia, joka yhdistettiin oletuksena:</string>
-  <string name="bt_ldac_open_dialog_summary">LDAC tarjoaa laadukkaan äänentoiston ja se kuluttaa myös enemmän virtaa. Toistaminen onnistuu Bluetooth-laitteistorajoituksien vuoksi</string>
-  <string name="bt_ldac_open_dialog_title">Haluatko ottaa LDAC käyttöön?</string>
+  <string name="bt_ldac_open_dialog_summary">LDAC tarjoaa laadukkaan äänentoiston, mutta se kuluttaa myös enemmän virtaa. Ongelmia voi ilmeentyä toiston aikana Bluetooth-laitteistorajoituksien vuoksi.</string>
+  <string name="bt_ldac_open_dialog_title">Otetaanko LDAC käyttöön?</string>
   <string name="bt_ldac_pre_summary">Tarjoaa laadukkaan äänentoiston</string>
   <string name="bt_ldac_pre_title">LDAC</string>
   <string name="bt_ldac_property">Ominaisuudet</string>
@@ -2285,6 +2285,7 @@ Voit muuttaa tätä asetusta myöhemmin kohdassa Asetukset > Sovellukset ja ilmo
   <string name="keyboard_shortcuts_helper">Pikanäppäinapuri</string>
   <string name="keyboard_shortcuts_helper_summary">Näytä käytettävissä olevat pikanäppäimet</string>
   <string name="keyguard_advance_setting_title">Lisäasetukset</string>
+  <string name="keyguard_vertical_clock_title">Pystysuora kello</string>
   <string name="keywords_accounts">tili</string>
   <string name="keywords_airplane">Lentokone;Lentokonetila;Lento;Lentotila</string>
   <string name="keywords_all_apps">sovellukset, lataus, järjestelmä</string>
@@ -2796,7 +2797,10 @@ Tällä laitteella on muita paikalla olevia käyttäjiä.
   <string name="miui_lab_feature_on">Päällä</string>
   <string name="miui_lab_features">MIUI lab ominaisuudet</string>
   <string name="miui_lab_gallery_search_desc">Paranneltu kuvahaku</string>
-  <string name="miui_lab_gallery_search_title">Etsi kuvia Galleriassa</string>
+  <string name="miui_lab_gallery_search_title">Löydä kuvia Galleriassa</string>
+  <string name="miui_lab_install_drive_mode_error">Ei voitu asentaa, yritä uudelleen.</string>
+  <string name="miui_lab_install_drive_mode_summary">Autotila on järjestelmäsovellus. Asentaminen ei vaadi internetyhteyttä.</string>
+  <string name="miui_lab_install_drive_mode_title">Asenna Autotila</string>
   <string name="miui_lab_settings">MIUI lab</string>
   <string name="miui_lab_slogan">Opi. Tutki. Löydä.</string>
   <string name="miui_master_clear_summary">Poistaa kaikki tiedot puhelimesta</string>
@@ -3058,6 +3062,8 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="normal_smartcover_title">Läpikuultamaton etukuori</string>
   <string name="not_battery_optimizing">Akun käytön optimointi ei käytössä</string>
   <string name="not_installed">Ei asennettu tälle käyttäjälle</string>
+  <string name="notch_force_black_desc">Ota käyttöön tummentaaksesi näyttöloven ympärillä oleva alue</string>
+  <string name="notch_force_black_title">Piilota näyttölovi</string>
   <string name="notes_privacy_password_role_instruction">Yksityiset muistiot säilytetään täällä.</string>
   <string name="notification_app_settings_button">Ilmoitusasetukset</string>
   <string name="notification_badge_title">Salli pistemerkki</string>
@@ -3067,7 +3073,7 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="notification_channel_badge_title">Näytä pistemerkki</string>
   <string name="notification_channel_sound_title">Ääni</string>
   <string name="notification_channel_title">Ilmoituksen luokka</string>
-  <string name="notification_channels">Luokat</string>
+  <string name="notification_channels">Ilmoituksien luokat</string>
   <string name="notification_channels_other">Muut</string>
   <string name="notification_content_block_summary">Älä näytä ilmoituksia ilmoitusalueella tai lisälaitteissa</string>
   <string name="notification_content_block_title">Näytä ilmoitukset</string>
@@ -3304,7 +3310,7 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="picture_in_picture_title">Kuva kuvassa</string>
   <string name="pin_failed">SIM-kortin PIN-toiminto epäonnistui!</string>
   <string name="ping_test_label">Käynnistä ping-testi</string>
-  <string name="play_pause_description">Toista Pysäytä Painike</string>
+  <string name="play_pause_description">Toista/Pysäytä-painike</string>
   <string name="please_select_phase2">Todennus: vaihe 2</string>
   <string name="please_type_passphrase">Salasana</string>
   <string name="pointer_location">Osoittimen sijainti</string>
@@ -4436,7 +4442,7 @@ PIN-koodi on mahdollisesti virheellinen."</string>
   <string name="sound_settings_summary">Soittoäänen voimakkuus: %1$s</string>
   <string name="sound_settings_summary_silent">Soittoääni on mykistetty.</string>
   <string name="sound_settings_summary_vibrate">Soittoääni on mykistetty. Puhelin värisee, kun saat puhelun.</string>
-  <string name="sound_stereo_mode_summary">Käytettävissä vain, kun toistat ääntä kaiuttimesta</string>
+  <string name="sound_stereo_mode_summary">Toimii vain kaiuttimesta</string>
   <string name="sound_stereo_mode_title">Stereoääni</string>
   <string name="sound_vibrate_settings">Ääni ja värinä</string>
   <string name="sound_work_settings">Työprofiilin äänet</string>
@@ -5402,21 +5408,21 @@ Napauta plussaa lisätäksesi sanoja."</string>
   <string name="wallpaper_suggestion_summary">Muokkaa näyttöäsi</string>
   <string name="wallpaper_suggestion_title">Vaihda taustakuva</string>
   <string name="wapi_auto_sel_cert">Valitse automaattisesti</string>
-  <string name="wapi_auto_sel_cert_fail">Varmennetta ei voi valita automaattisesti. Valitse varmenne luettelosta ja yritä sen jälkeen yhdistää.</string>
+  <string name="wapi_auto_sel_cert_fail">Varmenteita ei voi valita automaattisesti. Valitse varmenne luettelosta ja yritä sen jälkeen yhdistää.</string>
   <string name="wapi_cert_is_not_selected">Valitse varmenne ensin</string>
   <string name="wapi_cert_manage_summary">Lisää tai poista WAPI varmenne</string>
   <string name="wapi_cert_manage_title">WAPI varmenteenhallinta</string>
   <string name="wapi_cert_select">WAPI varmenne</string>
-  <string name="wapi_no">ei</string>
-  <string name="wapi_no_vaild_cert">Ei saatavilla olevia varmenteita, asennetaanko se nyt?</string>
-  <string name="wapi_password_empty">Syötä salasana</string>
-  <string name="wapi_password_hex_format_invalid">Virheellinen heksadesimaalimerkit</string>
-  <string name="wapi_password_hex_length_invalid">Heksadesimaalimerkkien määrä on oltava parillinen numero</string>
-  <string name="wapi_password_length_invalid">Salasanan on oltava: 8-64 merkkiä</string>
+  <string name="wapi_no">Ei</string>
+  <string name="wapi_no_vaild_cert">Näyttää siltä, että vaadittuja varmenteita ei ole asennettu. Asennetaanko nyt?</string>
+  <string name="wapi_password_empty">Anna salasana</string>
+  <string name="wapi_password_hex_format_invalid">Salasanan muoto on virheellinen</string>
+  <string name="wapi_password_hex_length_invalid">Heksadesimaalimerkkien määrän on oltava parillinen numero</string>
+  <string name="wapi_password_length_invalid">Salasanan on oltava: 8-64 merkkiä pitkä</string>
   <string name="wapi_psk_type">Salasanan tyyppi</string>
   <string name="wapi_psk_type_ascii">ASCII</string>
   <string name="wapi_psk_type_hex">Heksadesimaalinen</string>
-  <string name="wapi_yes">kyllä</string>
+  <string name="wapi_yes">Kyllä</string>
   <string name="warm_color">Lämmin</string>
   <string name="web_action_enable_summary">Avaa linkkejä sovelluksessa, vaikka sitä ei ole asennettu.</string>
   <string name="web_action_enable_title">Pikasovellukset</string>
