--- a/Finnish/main/ThemeManager.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/ThemeManager.apk/res/values-fi-rFI/strings.xml
@@ -78,6 +78,38 @@
   <string name="download_failed">Lataaminen epäonnistui</string>
   <string name="download_preview_failed">Esikatselun lataaminen epäonnistui</string>
   <string name="download_success">Lataus valmistui</string>
+  <string name="exo_controls_fastforward_description">Kelaa eteenpäin</string>
+  <string name="exo_controls_fullscreen_description">Kokonäyttötila</string>
+  <string name="exo_controls_next_description">Seuraava raita</string>
+  <string name="exo_controls_pause_description">Pysäytä</string>
+  <string name="exo_controls_play_description">Toista</string>
+  <string name="exo_controls_previous_description">Edellinen raita</string>
+  <string name="exo_controls_repeat_all_description">Toista kaikki</string>
+  <string name="exo_controls_repeat_off_description">Älä toista</string>
+  <string name="exo_controls_repeat_one_description">Toista kerran</string>
+  <string name="exo_controls_rewind_description">Kelaa taaksepäin</string>
+  <string name="exo_controls_shuffle_description">Sekoita</string>
+  <string name="exo_controls_stop_description">Lopeta</string>
+  <string name="exo_download_completed">Lataus valmis</string>
+  <string name="exo_download_description">Lataa</string>
+  <string name="exo_download_downloading">Ladataan</string>
+  <string name="exo_download_failed">Lataus epäonnistui</string>
+  <string name="exo_download_notification_channel_name">Lataukset</string>
+  <string name="exo_download_removing">Poistetaan lataukset</string>
+  <string name="exo_item_list">%1$s, %2$s</string>
+  <string name="exo_track_bitrate">%1$.2f Mbps</string>
+  <string name="exo_track_mono">Mono</string>
+  <string name="exo_track_resolution">%1$d × %2$d</string>
+  <string name="exo_track_selection_auto">Auto</string>
+  <string name="exo_track_selection_none">Ei mitään</string>
+  <string name="exo_track_selection_title_audio">Ääni</string>
+  <string name="exo_track_selection_title_text">Teksti</string>
+  <string name="exo_track_selection_title_video">Video</string>
+  <string name="exo_track_stereo">Stereo</string>
+  <string name="exo_track_surround">Surround-ääni</string>
+  <string name="exo_track_surround_5_point_1">5.1 surround-ääni</string>
+  <string name="exo_track_surround_7_point_1">7.1 surround-ääni</string>
+  <string name="exo_track_unknown">Tuntematon</string>
   <string name="fail_to_add_account">Tilin lisääminen epäonnistui</string>
   <string name="favorite_list">Suosikit</string>
   <string name="favorite_list_format">Suosikki %1$s</string>
@@ -399,6 +431,11 @@
   <string name="selected_resource_file_invalid">Valittua lähteen tiedostoa ei voi käyttää</string>
   <string name="set_color_ring_back_tone">Aseta mukautettu soittoääni</string>
   <string name="settings">Asetukset</string>
+  <string name="shortcut_add">Lisää kuvake</string>
+  <string name="shortcut_cancel">Ei kiitos</string>
+  <string name="shortcut_message">Lisää pikakuvake käynnistimeen!</string>
+  <string name="shortcut_show_tip">Älä näytä uudelleen</string>
+  <string name="shortcut_title">Tykkäätkö taustakuvistamme?</string>
   <string name="show_free">Näytä ilmaiset %1$s</string>
   <string name="show_incompatible">Näytä yhteensopimattomat %1$s</string>
   <string name="system_precust">Esiasennettu</string>
@@ -488,12 +525,19 @@
   <string name="uid_change_dialog_ok">Selvä</string>
   <string name="uid_change_dialog_title">Käynnistä laite</string>
   <string name="up_to_the_end">Siinä kaikki tältä erää. Palaa takaisin myöhemmin.</string>
+  <string name="update_btn">PÄIVITÄ NYT</string>
+  <string name="update_check">Tarkista päivitykset</string>
+  <string name="update_checking">Tarkistetaan päivityksiä…</string>
+  <string name="update_downloading">Ladataan päivityksiä…</string>
+  <string name="update_fail">Tietoja ei voitu hakea. Yritä uudelleen.</string>
   <string name="update_immediately">Päivitä nyt</string>
+  <string name="update_latest">Sovelluksesi on ajan tasalla</string>
+  <string name="update_no_net">Tapahtui verkkovirhe. Yritä uudelleen.</string>
+  <string name="update_title">UUSI PÄIVITYS SAATAVILLA</string>
   <string name="using_theme_has_update_tips">Päivitys on saatavilla tälle teemalle.</string>
   <string name="using_theme_next_automatic_update">Automaattiset päivitykset</string>
   <string name="using_theme_next_automatic_update_summary">Päivitä ladatut teemat automaattisesti Wi-Fi-yhteydellä, kun näyttö on lukittu</string>
-  <string name="video_apply_home">Aloitusnäyttö</string>
-  <string name="video_apply_home_lock">Aloitusnäyttö ja Lukitusnäyttö</string>
+  <string name="using_theme_show_ad">Näytä mainoksia</string>
   <string name="video_audio_apply_success">Määritettiin video äänellä onnistuneesti</string>
   <string name="video_data_tips_message">Mobiilidatan käyttäminen voi aiheuttaa lisäkustannuksia. Jatketaanko siitä huolimatta?</string>
   <string name="video_data_tips_title">Tiedonsiirtovaroitus</string>
@@ -504,13 +548,17 @@
   <string name="wallpaper_detail_load_page_no_network">Yhdistä verkkoon ja yritä uudelleen.</string>
   <string name="wallpaper_scroll_type_tips">Taustakuvan vierintä</string>
   <string name="wallpaper_set_as_both">Aseta molempiin</string>
-  <string name="wallpaper_set_as_destop">Aseta Aloitusnäytölle</string>
+  <string name="wallpaper_set_as_desktop">Aseta Aloitusnäytölle</string>
   <string name="wallpaper_set_as_lockscreen">Aseta Lukitusnäytölle</string>
   <string name="wallpaper_settings">Taustakuvan asetukset</string>
   <string name="wallpaper_settings_loading_text">Odota hetki…</string>
   <string name="wallpaper_settings_no_history">Ei historiaa</string>
   <string name="wallpaper_settings_pad_more_page_title">Lisää taustakuvia</string>
   <string name="wallpaper_settings_page_title">Taustakuva</string>
+  <string name="wifi_check_cancel">Peruuta</string>
+  <string name="wifi_check_confirm">Vahvista</string>
+  <string name="wifi_check_message">Käytetäänkö mobiilidataa päivityksien lataamiseen?</string>
+  <string name="wifi_check_tip">Älä näytä uudelleen</string>
   <string name="xiaoai_speech_not_installed_download">Lataa</string>
   <string name="xiaoai_speech_not_installed_message">Lataa ja asenna Mi AI-ääniavustaja jatkaaksesi.</string>
   <string name="xiaoai_speech_not_installed_title">Mi AI-ääniavustajaa ei ole asennettu.</string>
