--- a/Finnish/main/XiaomiSimActivateService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/XiaomiSimActivateService.apk/res/values-fi-rFI/strings.xml
@@ -107,11 +107,11 @@ Syötä uuden SIM-korttisi puhelinnumero aktivoidaksesi %s uudelleen."</string>
   <string name="activate_status_title_activating_msim">Aktivoidaan SIM-korttia %d…</string>
   <string name="agree">Salli</string>
   <string name="app_name">Xiaomi SIM-Aktivointipalvelu</string>
-  <string name="checking_client">Tarkistetaan asiakkaan env</string>
+  <string name="checking_client">Tarkistetaan aktivointiympäristöä</string>
   <string name="error_checking_client">Aktivoinnin aikana tapahtui virhe</string>
   <string name="error_network_io">Tapahtui verkkovirhe</string>
   <string name="error_no_send_sms_permission">Xiaomi SIM-Aktivointipalvelu tarvitsee käyttöoikeuden lähettää tekstiviestejä</string>
-  <string name="error_sim_not_in_service">Odotetaan SIM-kortin aktivointia</string>
+  <string name="error_sim_not_in_service">SIM-korttia ei voi aktivoida. Varmista, että saldoasi on tarpeeksi.</string>
   <string name="explain_send_sms_permission_button">Vahvista</string>
   <string name="explain_send_sms_permission_msg">Ottaaksesi %s käyttöön, Xiaomi Service Framework lähettää tekstiviestin vahvistaakseen puhelinnumerosi. Operaattorisi veloittaa sinua normaalista tekstiviestistä.</string>
   <string name="explain_send_sms_permission_title">Vahvista puhelinnumerosi</string>
@@ -124,5 +124,5 @@ Syötä uuden SIM-korttisi puhelinnumero aktivoidaksesi %s uudelleen."</string>
   <string name="privacy_revoke_failed_msg">Aktivointi vaatii valtuutuksen hyväksymisen, jotta Viesti -sovellus voi noutaa puhelinnumerosi</string>
   <string name="privacy_revoke_tips">Valtuutuksen peruuttamisen jälkeen sovellus lopettaa tietosi keräämisen ja poistaa kaikki tietosi palvelimilta. Synkronointi Mi Pilven kanssa, Mi Viesti ja muut Viestit -sovelluksen toiminnot ei ole enää käytettävissä. Peruutetaanko valtuutus siitä huolimatta?</string>
   <string name="sim_unactivated_title">SIM-korttisi ei ole aktivoitu</string>
-  <string name="waiting_sim_in_service">Odotetaan SIM-kortin palvelua</string>
+  <string name="waiting_sim_in_service">Odotetaan SIM-kortin aktivointia</string>
 </resources>
