--- a/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
@@ -217,7 +217,7 @@
   <string name="mobile_data_note_dialog_cancel">Odota Wi-Fiä</string>
   <string name="mobile_data_note_dialog_confirm">Lähetä</string>
   <string name="mobile_data_note_dialog_content">Näyttää siltä, että olet yhteydessä maksulliseen verkkoon. Lokitietojen lähettäminen mobiilidatalla saattaa lisätä maksuja.</string>
-  <string name="mobile_data_note_dialog_content_with_file_size">Lähettämällä lokitiedot käyttämällä mobiilidatayhteyttä vaatii %s Mt edestä dataa.</string>
+  <string name="mobile_data_note_dialog_content_with_file_size">Näyttää siltä, että olet yhteydessä maksulliseen verkkoon. Lokitietojen lähettäminen vaatii %s Mt edestä mobiilidataa.</string>
   <string name="mobile_data_note_dialog_title">Tiedonsiirtovaroitus</string>
   <string name="modem_tool_log_dumping_desc">Napauta kuvaketta aloittaaksesi</string>
   <string name="modem_tool_log_dumping_title">Tallennetaan modeemin lokitietoja</string>
