--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
@@ -119,6 +119,7 @@
   <string name="check_reminded_text">查看</string>
   <string name="chinese_leap">闰</string>
   <string name="chongsha">冲煞</string>
+  <string name="close_alarm">Poista käytöstä</string>
   <string name="copy_email">Kopioi sähköpostiosoite</string>
   <string name="copy_number">Kopioi puhelinnumero</string>
   <string name="countdown_event_title">Laskenta: %1$s</string>
@@ -288,6 +289,7 @@
   <string name="global_football_final">FINAALI</string>
   <string name="global_football_no_match">Jatkapallo-otteluita ei ole suunniteltu tälle päivälle.</string>
   <string name="global_onthisday_com">OnThisDay.com</string>
+  <string name="guide_card_close">sulje</string>
   <string name="guide_card_hint_text">Tuo syntymäpäivät yhteystiedoista</string>
   <string name="hint_attendees">Osallistujat</string>
   <string name="hint_description">Kuvaus</string>
@@ -375,6 +377,7 @@
   <string name="loan_event_title">贷款账单</string>
   <string name="local_calendar_display_name">Paikallinen kalenteri</string>
   <string name="local_owner_account_name">Tallennetaan tähän laitteeseen</string>
+  <string name="login_failed_toast">Kirjautuminen epäonnistui, päivitä ja yritä uudelleen</string>
   <string name="lunar_date">Lunar date</string>
   <string name="lunar_day"/>
   <string name="lunar_to_solar"/>
@@ -623,7 +626,9 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="swipe_up_guide_hint_text">上滑发现更多</string>
   <string name="synced">synkronoitu</string>
   <string name="taishen">胎神</string>
-  <string name="talk_back_read_date">Nykyinen päivämäärä: %1$s (%2$s kuukalenterin mukaan)</string>
+  <string name="talk_back_month">月</string>
+  <string name="talk_back_read_date">%1$s (%2$s kuukalenterin mukaan)</string>
+  <string name="talk_back_setting">asetus</string>
   <string name="template_announce_item_index">Tapahtuma %1$s / %2$s.</string>
   <string name="template_week_num">Viikko %1$s</string>
   <string name="text_day">日</string>
