--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
@@ -46,7 +46,7 @@
   <string name="worldcolock_timezone_local">Sama kuin paikallinen aika</string>
   <!-- miui 10 valmis -->
   <string name="add_alarm">Lisää hälytys</string>
-  <string name="add_clock">Lisää Kello</string>
+  <string name="add_clock">Lisää kello</string>
   <string name="add_timezone_title">Lisää aikavyöhyke</string>
   <string name="alarm_alert_alert_silenced">Herätys hiljennetään %d minuutin jälkeen.</string>
   <string name="alarm_alert_snooze_set">Torkutetaan %d minuuttia.</string>
