--- a/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/strings.xml
@@ -1,15 +1,18 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="about_hide_mode">Tietoja Virransäästöstä</string>
+  <string name="active_classify">Lajittele aktiivisuustilan mukaan</string>
   <string name="app_list_title">Valitse sovellukset</string>
   <string name="app_name">Akku ja suorituskyky</string>
   <string name="app_preload_policies_summary">Käytä koneoppimista ennustaaksesi todennäköisimmin käyttämäsi sovellukset, ja lataamalla ne ennakkoon.</string>
   <string name="app_preload_policies_title">AI-ennakkolataaminen</string>
+  <string name="appconfig_active_app_dialog_title">Hallinnoi aktiivisia sovelluksia</string>
   <string name="base_info">Perustiedot</string>
   <string name="cloud_addr_info">Pilven tiedot</string>
   <string name="cloud_china_addr">Päivitä Kiinan palvelimen tiedot</string>
   <string name="cloud_international_addr">Päivitä kansainvälisen palvelimen tiedot</string>
   <string name="cloud_staging_addr">Päivitä staging palvelimen tiedot</string>
+  <string name="config_classify">Lajittele sovelluksen asetuksen mukaan</string>
   <string name="config_description">MIUI osaa tunnistaa tietynlaisten sovelluksien taustaprosessit (esim. viesti- ja navigointisovellukset, mediasoittimet), ja asettaa Virransäästön niin, ettei se vaikuta sovelluksien tärkeisiin taustatyöskentelyihin.</string>
   <string name="config_mode_title">Tausta-asetukset</string>
   <string name="config_no_restrict_description">Virransäästö ei rajoita sovelluksen työskentelyä</string>
