--- a/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
@@ -80,17 +80,17 @@ Näytä valitun näppäimistön Tietosuojakäytäntö."</string>
   <string name="terms_of_use">Käyttöehdot</string>
   <string name="terms_of_use_label">"Yksityisyytesi on todella tärkeää meille. Lue meidän Palveluehdot ja Tietosuojakäytäntö, jotta ymmärrät mitä tietoja keräämme, kuinka käytämme niitä, ja mitä vaihtoehtoja sinulla on.
 
-Sinun täytyy hyväksyä Palveluehtomme ja Tietosuojakäytäntömme, ennen kuin voit käyttää MIUI:ta. Mi palvelut, Mi SIM-kortin aktivointipalvelut, Mi Pilvi, Etsi laite, Aloitusnäyttö, Pelikeskus, MAB, MIUI Daemon ja MSA järjestelmäkomponentit, Kääntämispalvelut, Pikasovellukset, Sovellusholvi, statistiikat, älykortit, Mi Link ja Mi Tilin komponentit ottavat yhteyden internetiin ja saavat sijaintisi."</string>
-<string name="terms_of_use_label_gms">"Yksityisyytesi on todella tärkeää meille. Lue meidän Palveluehdot ja Tietosuojakäytäntö, jotta ymmärrät mitä tietoja keräämme, kuinka käytämme niitä, ja mitä vaihtoehtoja sinulla on.
-
-Sinun täytyy hyväksyä Palveluehtomme ja Tietosuojakäytäntömme, ennen kuin voit käyttää MIUI:ta. Mi palvelut, Mi SIM-kortin aktivointipalvelut, Mi Pilvi, Etsi laite, Aloitusnäyttö, Pelikeskus, MAB, MIUI Daemon ja MSA järjestelmäkomponentit, Kääntämispalvelut, Pikasovellukset, Sovellusholvi, statistiikat, älykortit, Mi Link, Mi Tilin komponentit ja Google Play Palvelut ottavat yhteyden internetiin ja saavat sijaintisi."</string>
-<string name="terms_of_use_label_systemhelper">Itserekisteröivä palvelu</string>
+Sinun täytyy hyväksyä Palveluehtomme ja Tietosuojakäytäntömme, ennen kuin voit käyttää MIUI:ta. %s ja Mi Tilin komponentit ottavat yhteyden internetiin ja hakevat sijaintisi."</string>
+  <string name="terms_of_use_label_systemhelper">, Itserekisteröity palvelu</string>
+  <string name="terms_of_use_lable_apps">Mi-palvelut, Mi SIM -aktivointipalvelut, Mi Cloud, Etsi laite, Aloitusnäyttö, Pelikeskus, MAB, MIUI Daemon ja MSA-järjestelmän komponentit, Käännöspalvelut, Quick-sovellukset, Sovellusholvi, tilastot, Mi Link</string>
   <string name="terms_of_use_lable_default_input_method_facemoji">"
 
 Sinun täytyy hyväksyä Facemoji:n Tietosuojakäytäntö ennen tämän ominaisuuden käyttämistä."</string>
   <string name="terms_of_use_lable_default_input_method_kika">"
 
 Sinun täytyy hyväksyä Kika:n Tietosuojakäytäntö ennen tämän ominaisuuden käyttämistä."</string>
+  <string name="terms_of_use_lable_gms">, Google Play-palvelut</string>
+  <string name="terms_of_use_lable_smart_cards">, Älykortit</string>
   <string name="terms_privacy_policy_input_method_facemoji">Facemoji:n Tietosuojakäytäntö</string>
   <string name="terms_privacy_policy_input_method_kika">Kika:n Tietosuojakäytäntö</string>
   <string name="title_fingerprint">Aseta salasana</string>
