--- a/Finnish/main/CellBroadcastReceiver.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CellBroadcastReceiver.apk/res/values-fi-rFI/strings.xml
@@ -1,6 +1,38 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="add_channel">Lisää kanava</string>
+  <string name="ae_emergency_alert_title">تحذيرطارئ</string>
+  <string name="ae_emergency_alerts_title">الرسائل التحذيرية الطارئة</string>
+  <string name="ae_exercise_title">تمرين</string>
+  <string name="ae_exercises_title">تمارين</string>
+  <string name="ae_national_emergency_alert_title">تحذيرطارئ وطني</string>
+  <string name="ae_national_emergency_alerts_title">الرسائل التحذيرية الوطنية</string>
+  <string name="ae_test_alert_title">رسالة تجريبية</string>
+  <string name="ae_test_alerts_title">الرسالة التجريبية</string>
+  <string name="ae_warning_alert_title">رسائل تحذيرية</string>
+  <string name="ae_warning_alerts_title">الرسائل التحذيرية</string>
+  <string name="alert_4371">4371</string>
+  <string name="alert_4372">4372</string>
+  <string name="alert_4373">4373</string>
+  <string name="alert_4374">4374</string>
+  <string name="alert_4375">4375</string>
+  <string name="alert_4376">4376</string>
+  <string name="alert_4377">4377</string>
+  <string name="alert_4378">4378</string>
+  <string name="alert_4379">4379</string>
+  <string name="alert_4380">4380</string>
+  <string name="alert_4384">4384</string>
+  <string name="alert_4385">4385</string>
+  <string name="alert_4386">4386</string>
+  <string name="alert_4387">4387</string>
+  <string name="alert_4388">4388</string>
+  <string name="alert_4389">4389</string>
+  <string name="alert_4390">4390</string>
+  <string name="alert_4391">4391</string>
+  <string name="alert_4392">4392</string>
+  <string name="alert_4393">4393</string>
+  <string name="alert_reminder_interval_default_value">0</string>
+  <string name="alert_reminder_interval_summary"/>
   <string name="alert_reminder_interval_title">Ilmoitusmuistutus</string>
   <string name="app_label">Cell Broadcast -lähetykset</string>
   <string name="button_cancel">Peruuta</string>
@@ -24,7 +56,7 @@
   <string name="cb_menu_delete">Poista lähetys</string>
   <string name="cb_menu_edit">Muokkaa</string>
   <string name="cb_menu_tile">Kanavan toiminta</string>
-  <string name="cb_other_message_identifiers">Cell Broadcast</string>
+  <string name="cb_other_message_identifiers">Lähetysviestit</string>
   <string name="cell_broadcast_setting">Cell Broadcast asetukset</string>
   <string name="cell_broadcast_settings_not_available">Solulähetysasetukset eivät ole käytettävissä tälle käyttäjälle</string>
   <string name="channel_list">Kanavalista</string>
@@ -75,7 +107,23 @@
   <string name="delivery_time_heading">Vastaanotettu:</string>
   <string name="disable">Poista käytöstä</string>
   <string name="done_text">Valmis</string>
+  <string name="emergency_alert">Hätätilannehälytys</string>
   <string name="emergency_alert_settings_title">Hätätilannevaroitusten asetukset</string>
+  <string name="emergency_alerts">Hätätilannehälytykset</string>
+  <string name="en_alert_message_dialog_title">Hälytysviesti</string>
+  <string name="en_emergency_alert_dialog_title">Hätätilannehälytys</string>
+  <string name="en_emergency_alert_title">Hätätilannehälytys</string>
+  <string name="en_emergency_alerts_title">Hätätilannehälytykset</string>
+  <string name="en_exercise_title">Harjoitus</string>
+  <string name="en_exercises_title">Harjoituksia</string>
+  <string name="en_national_emergency_alert_title">Kansallinen hätätilannehälytys</string>
+  <string name="en_national_emergency_alerts_title">Kansalliset hätätilannehälytykset</string>
+  <string name="en_presidential_alert_dialog_title">Presidentillinen hälytys</string>
+  <string name="en_required_monthly_test_dialog_title">Vaadittu kuukausittainen kokeilu</string>
+  <string name="en_test_alert_title">Kokeiluhälytys</string>
+  <string name="en_test_alerts_title">Kokeiluhälytyksiä</string>
+  <string name="en_warning_alert_title">Varoitushälytys</string>
+  <string name="en_warning_alerts_title">Varoitushälytyksiä</string>
   <string name="enable">Ota käyttöön</string>
   <string name="enable_alert_speech_summary">Käytä tekstistä puheeksi -toimintoa hätätilannevaroitusviesteissä</string>
   <string name="enable_alert_speech_title">Puhu varoitusilmoitus</string>
@@ -95,7 +143,7 @@
   <string name="enable_cmas_presidential_alerts_title">Näytä presidentin hälytykset</string>
   <string name="enable_cmas_severe_threat_alerts_summary">Näytä vakavat ihmishenkiä ja omaisuutta koskevat hälytykset</string>
   <string name="enable_cmas_severe_threat_alerts_title">Näytä vakavat uhkat</string>
-  <string name="enable_cmas_test_alerts_summary">Näytä Commercial Mobile Alert Systemin testilähetykset</string>
+  <string name="enable_cmas_test_alerts_summary">Vastaanota turvahälytysjärjestelmän testiviestejä</string>
   <string name="enable_cmas_test_alerts_title">Näytä CMAS-testilähetykset</string>
   <string name="enable_emergency_alerts_summary">Näytä hätätilannevaroituslähetyksiä</string>
   <string name="enable_emergency_alerts_title">Ota ilmoitukset käyttöön</string>
@@ -108,12 +156,19 @@
   <string name="etws_other_emergency_type">Hätätilannevaroitus</string>
   <string name="etws_test_message">ETWS-testiviesti</string>
   <string name="etws_tsunami_warning">Tsunamivaroitus</string>
+  <string name="exercise">Harjoitus</string>
+  <string name="exercises">Harjoitukset</string>
+  <string name="gsma_911">911</string>
+  <string name="gsma_919">919</string>
   <string name="menu_delete">Poista lähetys</string>
   <string name="menu_delete_all">Poista lähetyksiä</string>
   <string name="menu_preferences">Asetukset</string>
   <string name="menu_view_details">Näytä tiedot</string>
   <string name="message_options">Viestiasetukset</string>
+  <string name="national_emergency_alert">Kansallinen hätätilannehälytys</string>
+  <string name="national_emergency_alerts">Kansalliset hätätilannehälytykset</string>
   <string name="no_cell_broadcasts">Omalla alueellasi ei ole aktiivisia hälytyksiä. Voit vaihtaa hälytysasetuksia Asetukset-valikosta.</string>
+  <string name="notification_channel_broadcast_messages">Lähetysviestit</string>
   <string name="notification_multiple">%s lukematonta hälytystä</string>
   <string name="notification_multiple_title">Uusia hälytyksiä</string>
   <string name="pws_other_message_identifiers">Hätätilannevaroitus</string>
@@ -122,7 +177,26 @@
   <string name="show_cmas_opt_out_summary">Näytä kieltäytymisikkuna ensimmäisen CMAS-ilmoituksen jälkeen (muun kuin presidentin ilmoituksen).</string>
   <string name="show_cmas_opt_out_title">Näytä kieltäytymisikkuna</string>
   <string name="sms_cb_settings">Cell Broadcast -asetukset</string>
+  <string name="test_alert">Kokeiluhälytys</string>
+  <string name="test_alerts">Kokeiluhälytykset</string>
+  <string name="tw_alert_message">Hälytysviesti</string>
+  <string name="tw_alert_message_dialog_title">警訊通知</string>
+  <string name="tw_alert_message_level_language_summary">Hälytysviesti (Englanti)</string>
+  <string name="tw_alert_message_level_summary">Hälytysviesti (Kiina)</string>
+  <string name="tw_emergency_alert">Hätätilannehälytys</string>
+  <string name="tw_emergency_alert_dialog_title">緊急警報</string>
+  <string name="tw_emergency_alert_level_language_summary">Hätätilannehälytys (Englanti)</string>
+  <string name="tw_emergency_alert_level_summary">Hätätilannehälytys (Kiina)</string>
+  <string name="tw_presidential_alert_dialog_title">國家級警報</string>
+  <string name="tw_presidential_level_language_summary">Presidentillinen hälytys (Englanti)</string>
+  <string name="tw_presidential_level_summary">Presidentillinen hälytys (Kiina)</string>
+  <string name="tw_required_monthly_test">Vaadittu kuukausittainen kokeilu</string>
+  <string name="tw_required_monthly_test_dialog_title">每月測試用訊息</string>
+  <string name="tw_required_monthly_test_level_language_summary">Vaadittu kuukausittainen kokeilu (Englanti)</string>
+  <string name="tw_required_monthly_test_level_summary">Vaadittu kuukausittainen kokeilu (Kiina)</string>
   <string name="updating_settings">Päivitetään asetuksia</string>
   <string name="updating_title">Puheluasetukset</string>
   <string name="view_details_title">Ilmoituksen tiedot</string>
+  <string name="warning_alert">Varoitushälytys</string>
+  <string name="warning_alerts">Varoitushälytykset</string>
 </resources>
